--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
     "markaspot/markaspot_default_content": ">8@dev",
     "markaspot/service_request": ">8@dev",
     "markaspot/masradix": "^8.3",
-    "markaspot/fa_icon_class": ">8@dev",
+    "markaspot/fa_icon_class": "^8.1@RC",
     "drupal/address": "~1.0",
     "drupal/features": "^3.0",
     "drupal/core": "8.4.*",
