--- a/composer.json
+++ b/composer.json
@@ -41,24 +41,29 @@
     }
   ],
   "require": {
+    "npm-asset/leaflet.locatecontrol": "0.62.0",
+    "npm-asset/leaflet-control-geocoder": "1.5.6",
+    "npm-asset/fontawesome-iconpicker": "^1.3",
+    "npm-asset/waypoints": "4.0.1",
+    "npm-asset/iso8601-js-period": "0.2.0",
+    "npm-asset/dateformat": "3.0.2",
+    "npm-asset/leaflet": "~1.0.0",
+    "npm-asset/leaflet-timedimension": "^1.0",
+    "npm-asset/leaflet.heat": "0.2.0",
+    "npm-asset/leaflet.markercluster": "1.2.0",
+    "npm-asset/leaflet-fullscreen": "1.0.2",
+    "npm-asset/leaflet-easybutton": "2.2.2",
+    "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
+    "npm-asset/font-awesome": "4.7.0",
+    "npm-asset/pace-js": "^0.7",
+    "npm-asset/shariff": "2.0.2",
     "oomphinc/composer-installers-extender": "^1.1",
     "composer/installers": "^1.2",
     "drupal-composer/drupal-scaffold": "^2.2",
     "cweagans/composer-patches": "~1.6",
+    "phayes/geophp": "dev-master",
+    "anthonymartin/geo-location": "^1.0",
     "drush/drush": "~8.0",
-    "markaspot/markaspot_open311": "*",
-    "markaspot/markaspot_blocks": ">8@dev",
-    "markaspot/markaspot_uuid": ">8@dev",
-    "markaspot/markaspot_ui": ">8@dev",
-    "markaspot/markaspot_static_json": ">8@dev",
-    "markaspot/markaspot_map": ">8@dev",
-    "markaspot/markaspot_features": ">8@dev",
-    "markaspot/markaspot_validation": ">8@dev",
-    "markaspot/markaspot_token": ">8@dev",
-    "markaspot/markaspot_default_content": ">8@dev",
-    "markaspot/service_request": ">8@dev",
-    "markaspot/masradix": "^8.3",
-    "markaspot/fa_icon_class": "^8.1@RC",
     "drupal/address": "~1.0",
     "drupal/features": "^3.0",
     "drupal/core": "8.4.*",
@@ -67,7 +72,7 @@
     "drupal/admin_toolbar": "1.*",
     "drupal/restui": "^1.15",
     "drupal/token": "1.*",
-    "drupal/shariff": ">=1.1",
+    "drupal/shariff": ">=1.3",
     "drupal/r4032login": "dev-1.x",
     "drupal/views_bootstrap": "^3.0",
     "drupal/better_normalizers": "1.x-dev",
@@ -81,7 +86,16 @@
     "drupal/geolocation": "^1.11",
     "drupal/rules": "3.x-dev",
     "drupal/maillog": "1.x-dev",
-    "drupal/services_api_key_auth": "1.*"
+    "drupal/services_api_key_auth": "1.*",
+    "drupal/search_api": "^1.5",
+    "drupal/views_infinite_scroll": "^1.5",
+    "drupal/better_exposed_filters": "^3.0",
+    "drupal/default_content": "1.x-dev",
+    "drupal/color_field": "2.x-dev",
+    "drupal/field_permissions": "1.x-dev",
+    "drupal/twig_tweak": "^2.0",
+    "drupal/field_formatter_class":"^1.0",
+    "bower-asset/slideout.js": "1.0.1"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -127,12 +141,11 @@
       },
       "drupal/rules": {
         "Type definition error": "https://www.drupal.org/files/issues/rules-Fix_type_definition_error-2694685-30.patch",
-        "TokenProcessor Array to sting warning": "https://www.drupal.org/files/issues/rules-user_has_role-2824360-2-8x3x.patch",
         "Action send mail, implode error": "https://www.drupal.org/files/issues/system-send-email-action-fails-if-to-is-a-string-2827183-2.patch",
         "Send mail text field 2 textarea": "https://www.drupal.org/files/issues/453.patch"
       },
       "drupal/shariff": {
-        "Update library path for shariff latest version": "https://gist.githubusercontent.com/markaspot/d493f888f7fb85a23d94352f44f0d6d7/raw/9e15e8bdff4c73d0d2ca7f1fab0e626a0ce3f332/update-lib-path.patch"
+        "Update library path for shariff latest version using npm-asset": "https://gist.githubusercontent.com/markaspot/d493f888f7fb85a23d94352f44f0d6d7/raw/3f31724a33197631da56ff4d597992f6e02641fb/gistfile1.txt"
       }
     }
   }
