--- a/modules/markaspot_map/markaspot_map.libraries.yml
+++ b/modules/markaspot_map/markaspot_map.libraries.yml
@@ -1,3 +1,8 @@
+dateFormat:
+  header: true
+  js:
+    /libraries/dateFormat/lib/dateformat.js: {}
+
 leaflet:
   js:
     /libraries/leaflet/dist/leaflet.js: {}
@@ -44,7 +49,6 @@ leaflet-timedimension:
   js:
     /libraries/leaflet-timedimension/dist/leaflet.timedimension.min.js: {}
     /libraries/iso8601-js-period/iso8601.min.js: {}
-    /libraries/dateFormat/lib/dateformat.js: {}
   css:
     component:
       /libraries/leaflet-timedimension/dist/leaflet.timedimension.control.min.css: {}
