--- a/themes/custom/masradix/config/install/block.block.views_block__stats_block_status_category.yml
+++ b/themes/custom/masradix/config/install/block.block.views_block__stats_block_status_category.yml
@@ -7,17 +7,17 @@ dependencies:
     - views
   theme:
     - masradix
-id: views_block__stats_block_2
+id: views_block__stats_block_status_category
 theme: masradix
 region: sidebar
-weight: -5
+weight: -8
 provider: null
-plugin: 'views_block:stats-block_2'
+plugin: 'views_block:stats-block_status_category'
 settings:
-  id: 'views_block:stats-block_2'
+  id: 'views_block:stats-block_status_category'
   label: ''
   provider: views
-  label_display: true
+  label_display: visible
   views_label: ''
   items_per_page: none
 visibility: {  }
