--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,7 @@
     "drupal/paragraphs": "^1.2",
     "drupal/entity_reference_revisions": "^1.3",
     "drupal/diff": "^1.0",
+    "drupal/fa_icon_class": "^1.0",
     "drupal/field_group": "^1.0",
     "drupal/form_mode_manager": "^1.2",
     "drupal/geolocation": "^1.11",
