--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
     "markaspot/markaspot_validation": ">8@dev",
     "markaspot/markaspot_token": ">8@dev",
     "markaspot/markaspot_default_content": ">8@dev",
-    "markaspot/service_request": "~8.3",
+    "markaspot/service_request": "8.3.1",
     "markaspot/masradix": "~8.3",
     "markaspot/fa_icon_class": "^8.1@RC",
     "drupal/address": "~1.0",
