Add and modify default content.

--- a/modules/markaspot_default_content/markaspot_default_content.info.yml
+++ b/modules/markaspot_default_content/markaspot_default_content.info.yml
@@ -7,3 +7,7 @@ dependencies:
   - default_content
   - block_content
   - markaspot_blocks
+  - services_api_key_auth
+  - node
+  - service_request
+  - page_manager
