Add new config for stats, modify blocks for panelized pages.

--- a/themes/custom/masradix/config/install/block.block.markaspotbuiltwithblock.yml
+++ b/themes/custom/masradix/config/install/block.block.markaspotbuiltwithblock.yml
@@ -7,7 +7,7 @@ dependencies:
     - masradix
 id: markaspotbuiltwithblock
 theme: masradix
-region: sidebar
+region: footer
 weight: 0
 provider: null
 plugin: 'Markaspot Built With Block'
