--- a/themes/custom/masradix/config/install/block.block.seven_markaspotmap.yml
+++ b/themes/custom/masradix/config/install/block.block.seven_markaspotmap.yml
@@ -20,6 +20,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/requests\r\n<front>"
+    pages: "/requests\r\n/requests/*\r\n/open311\r\n/about"
     negate: false
     context_mapping: {  }
