--- a/themes/custom/masradix/config/install/block.block.shariffsharebuttons.yml
+++ b/themes/custom/masradix/config/install/block.block.shariffsharebuttons.yml
@@ -8,7 +8,7 @@ dependencies:
     - masradix
 id: shariffsharebuttons
 theme: masradix
-region: sidebar
+region: footer
 weight: 0
 provider: null
 plugin: shariff_block
