--- a/themes/custom/masradix/config/install/block.block.views_block__stats_block_status_category.yml
+++ b/themes/custom/masradix/config/install/block.block.views_block__stats_block_status_category.yml
@@ -20,4 +20,9 @@ settings:
   label_display: visible
   views_label: ''
   items_per_page: none
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: "/requests\r\n/requests/*\r\n/open311\r\n/about"
+    negate: false
+    context_mapping: {  }
