--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,7 @@
     "drupal/entity_reference_revisions": "^1.3",
     "drupal/diff": "^1.0",
     "drupal/field_group": "^1.0",
-    "drupal/form_mode_manager": "^1.2",
+    "drupal/form_mode_manager": "2.x-dev",
     "drupal/geolocation": "^1.11",
     "drupal/rules": "3.x-dev",
     "drupal/maillog": "1.x-dev",
