--- a/themes/custom/masradix/config/install/block.block.masradix_markaspotmaprequest.yml
+++ b/themes/custom/masradix/config/install/block.block.masradix_markaspotmaprequest.yml
@@ -6,20 +6,20 @@ dependencies:
     - system
   theme:
     - masradix
-id: masradix_markaspotmap
+id: masradix_markaspotmaprequest
 theme: masradix
 region: map
 weight: -3
 provider: null
 plugin: markaspot_map_block
 settings:
-  id: markaspot_map_block
+  id: markaspot_map_request_block
   label: 'Markaspot Map'
   provider: markaspot_map
   label_display: '0'
 visibility:
   request_path:
     id: request_path
-    pages: "/requests\r\n/requests/*\r\n"
+    pages: "/node/*\r\n/node\r\n/requests\r\n/requests/*\r\n/open311\r\n/about"
     negate: false
     context_mapping: {  }
