--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
     "npm-asset/font-awesome": "4.7.0",
     "npm-asset/pace-js": "^0.7",
     "npm-asset/shariff": "2.0.2",
+    "bower-asset/slideout.js": "1.0.1"
     "oomphinc/composer-installers-extender": "^1.1",
     "composer/installers": "^1.2",
     "drupal-composer/drupal-scaffold": "^2.2",
@@ -82,7 +83,7 @@
     "drupal/entity_reference_revisions": "^1.3",
     "drupal/diff": "^1.0",
     "drupal/field_group": "^1.0",
-    "drupal/form_mode_manager": "2.x-dev",
+    "drupal/form_mode_manager": "~2",
     "drupal/geolocation": "^1.11",
     "drupal/rules": "3.x-dev",
     "drupal/maillog": "1.x-dev",
@@ -95,7 +96,10 @@
     "drupal/field_permissions": "1.x-dev",
     "drupal/twig_tweak": "^2.0",
     "drupal/field_formatter_class":"^1.0",
-    "bower-asset/slideout.js": "1.0.1"
+    "drupal/hide_revision_field": "^1.1",
+    "drupal/page_manager": "^4.0@beta",
+    "drupal/panels": "^4.2",
+    "drupal/quick_node_clone": "^1.5",
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
