--- a/themes/custom/masradix/config/install/block.block.markaspotmaprequestsblock.yml
+++ b/themes/custom/masradix/config/install/block.block.markaspotmaprequestsblock.yml
@@ -6,20 +6,20 @@ dependencies:
     - system
   theme:
     - masradix
-id: masradix_markaspotmaprequest
+id: markaspotmaprequestsblock
 theme: masradix
 region: map
-weight: -3
+weight: 0
 provider: null
-plugin: markaspot_map_block
+plugin: markaspot_map_request_block
 settings:
   id: markaspot_map_request_block
-  label: 'Markaspot Map'
+  label: 'Mark-a-Spot Map Requests Block'
   provider: markaspot_map
   label_display: '0'
 visibility:
   request_path:
     id: request_path
-    pages: "/node/*\r\n/node\r\n/requests\r\n/requests/*\r\n/open311\r\n/about"
+    pages: "/requests\r\n/requests/*\r\n/node/*"
     negate: false
     context_mapping: {  }
