--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
     }
   ],
   "require": {
+    "npm-asset/bootstrap-select": "^1",
     "npm-asset/leaflet.locatecontrol": "0.62.0",
     "npm-asset/leaflet-control-geocoder": "1.5.6",
     "npm-asset/fontawesome-iconpicker": "^1.3",
