Add some permissions.

--- a/modules/markaspot_features/markaspot_user/config/install/user.role.editorial_board.yml
+++ b/modules/markaspot_features/markaspot_user/config/install/user.role.editorial_board.yml
@@ -1,3 +1,4 @@
+uuid: 3d0c7c55-00a0-4810-afa7-62211c4db7cb
 langcode: en
 status: true
 dependencies: {  }
@@ -6,25 +7,34 @@ label: 'Editorial board'
 weight: 4
 is_admin: null
 permissions:
-  - 'access content'
-  - 'use exclude node title'
   - 'access comments'
-  - 'post comments'
-  - 'skip comment approval'
-  - 'access site-wide contact form'
-  - 'access shortcuts'
-  - 'search content'
+  - 'access content'
+  - 'access content overview'
+  - 'access contextual links'
+  - 'access files overview'
   - 'access open311 extension'
-  - 'create field_status_notes'
-  - 'edit own field_status_notes'
-  - 'edit field_status_notes'
-  - 'create field_e_mail'
-  - 'edit own field_e_mail'
-  - 'edit field_e_mail'
-  - 'view own field_e_mail'
-  - 'view field_e_mail'
+  - 'access shortcuts'
+  - 'access site-wide contact form'
+  - 'bypass mas validation'
   - 'create field_address'
-  - 'edit own field_address'
+  - 'create field_e_mail'
+  - 'create field_status_notes'
+  - 'edit any service_request content'
   - 'edit field_address'
-  - 'view own field_status_notes'
+  - 'edit field_e_mail'
+  - 'edit field_status_notes'
+  - 'edit own field_address'
+  - 'edit own field_e_mail'
+  - 'edit own field_status_notes'
+  - 'edit own service_request content'
+  - 'post comments'
+  - 'search content'
+  - 'skip comment approval'
+  - 'use exclude node title'
+  - 'use node.default form mode'
+  - 'use node.edit_service_request form mode'
+  - 'use node.management form mode'
+  - 'view field_e_mail'
   - 'view own field_address'
+  - 'view own field_e_mail'
+  - 'view own field_status_notes'
