--- a/modules/markaspot_features/markaspot_user/config/install/user.role.anonymous.yml
+++ b/modules/markaspot_features/markaspot_user/config/install/user.role.anonymous.yml
@@ -6,15 +6,15 @@ label: 'Anonymous user'
 weight: 0
 is_admin: false
 permissions:
-  - 'access content'
-  - 'use exclude node title'
   - 'access comments'
-  - 'access site-wide contact form'
-  - 'search content'
+  - 'access content'
+  - 'administer contact forms'
+  - 'create field_e_mail'
+  - 'create service_request content'
   - 'restful get georeport_request_index_resource'
   - 'restful get georeport_service_index_resource'
-  - 'view field_status_notes'
-  - 'view field_status'
-  - 'create field_e_mail'
+  - 'search content'
+  - 'use exclude node title'
   - 'view field_address'
-  - 'create service_request content'
+  - 'view field_status'
+  - 'view field_status_notes'
