--- a/modules/markaspot_features/markaspot_user/config/install/user.role.authenticated.yml
+++ b/modules/markaspot_features/markaspot_user/config/install/user.role.authenticated.yml
@@ -6,16 +6,17 @@ label: 'Authenticated user'
 weight: 1
 is_admin: false
 permissions:
-  - 'access content'
-  - 'use exclude node title'
   - 'access comments'
-  - 'post comments'
-  - 'skip comment approval'
-  - 'access site-wide contact form'
-  - 'access shortcuts'
-  - 'search content'
+  - 'access content'
   - 'access open311 extension'
-  - 'view field_status_notes'
+  - 'access shortcuts'
+  - 'administer contact forms'
+  - 'create service_request content'
+  - 'post comments'
   - 'restful post georeport_request_index_resource'
+  - 'search content'
+  - 'skip comment approval'
+  - 'use exclude node title'
   - 'use text format basic_html'
   - 'view field_address'
+  - 'view field_status_notes'
