--- a/modules/service_request/config/install/field.storage.node.field_organisation.yml
+++ b/modules/service_request/config/install/field.storage.node.field_organisation.yml
@@ -1,6 +1,9 @@
 langcode: en
 status: true
 dependencies:
+  enforced:
+    module:
+      - service_request
   module:
     - field_permissions
     - node
