--- a/config/install/views.view.stats.yml
+++ b/config/install/views.view.stats.yml
@@ -1,5 +1,4 @@
-uuid: 43b7f2b9-80f8-18161-98ff-7f2b980f856f1f498ff7f218dd2fa
-langcode: de
+langcode: en
 status: true
 dependencies:
   config:
@@ -202,7 +201,7 @@ display:
           decimal: .
           separator: ', '
           format_plural: 0
-          format_plural_string: !!binary MQNAY291bnQ=
+          format_plural_string:
           prefix: ''
           suffix: ''
           click_sort_column: value
@@ -344,6 +343,7 @@ display:
         title: false
         fields: false
         relationships: false
+        query: false
       filter_groups:
         operator: AND
         groups:
@@ -481,7 +481,7 @@ display:
           table: node_field_data
           field: nid
           relationship: reverse__node__field_status
-          group_type: count
+          group_type: count_distinct
           admin_label: ''
           label: ''
           exclude: false
@@ -560,6 +560,14 @@ display:
           required: false
           entity_type: taxonomy_term
           plugin_id: entity_reverse
+      query:
+        type: views_query
+        options:
+          disable_sql_rewrite: false
+          distinct: false
+          replica: false
+          query_comment: ''
+          query_tags: {  }
     cache_metadata:
       max-age: -1
       contexts:
@@ -1291,70 +1299,6 @@ display:
           1: AND
       title: 'Statistics by Status'
       fields:
-        field_status:
-          id: field_status
-          table: node__field_status
-          field: field_status
-          relationship: reverse__node__field_status
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_label
-          settings:
-            link: false
-          group_column: target_id
-          group_columns:
-            target_id: target_id
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
         nid:
           id: nid
           table: node_field_data
@@ -1493,6 +1437,73 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        name:
+          id: name
+          table: taxonomy_term_field_data
+          field: name
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: status
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns:
+            value: value
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          convert_spaces: false
+          entity_type: taxonomy_term
+          entity_field: name
+          plugin_id: term_name
       relationships:
         reverse__node__field_status:
           id: reverse__node__field_status
@@ -1510,14 +1521,14 @@ display:
         type: data_field
         options:
           field_options:
-            field_status:
-              alias: status
-              raw_output: false
             nid:
               alias: count
               raw_output: false
             field_status_hex:
               alias: color
+              raw_output: false
+            name:
+              alias: status
               raw_output: false
       arguments:
         created_year:
@@ -1631,7 +1642,6 @@ display:
         - url
         - user.permissions
       tags:
-        - 'config:field.storage.node.field_status'
         - 'config:field.storage.taxonomy_term.field_status_hex'
   rest_export_3:
     display_plugin: rest_export
