--- a/modules/markaspot_features/markaspot_user/config/install/user.role.editorial_board.yml
+++ b/modules/markaspot_features/markaspot_user/config/install/user.role.editorial_board.yml
@@ -15,6 +15,7 @@ permissions:
   - 'access open311 extension'
   - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'access toolbar'
   - 'bypass mas validation'
   - 'create field_address'
   - 'create field_e_mail'
@@ -30,6 +31,7 @@ permissions:
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
+  - 'switch users'
   - 'use exclude node title'
   - 'use node.default form mode'
   - 'use node.edit_service_request form mode'
@@ -38,3 +40,4 @@ permissions:
   - 'view own field_address'
   - 'view own field_e_mail'
   - 'view own field_status_notes'
+  - 'view the administration theme'
