--- a/composer.json
+++ b/composer.json
@@ -100,7 +100,12 @@
     "drupal/hide_revision_field": "^1.1",
     "drupal/page_manager": "^4.0@beta",
     "drupal/panels": "^4.2",
-    "drupal/quick_node_clone": "^1.5"
+    "drupal/entity_clone": "^1.0@alpha",
+    "drupal/pbf": "^1.1",
+    "drupal/quick_node_clone": "^1.5",
+    "drupal/tac_lite": "^1.4",
+    "drupal/views_bulk_edit": "^2",
+    "drupal/views_bulk_operations": "1.0.0"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
