--- a/modules/markaspot_group/config/install/core.entity_form_display.user.user.default.yml
+++ b/modules/markaspot_group/config/install/core.entity_form_display.user.user.default.yml
@@ -22,9 +22,9 @@ content:
     weight: 32
     settings:
       grant_global: 0
-      grant_public: 1
-      grant_view: 0
-      grant_update: 0
+      grant_public:
+      grant_view: 1
+      grant_update: 1
       grant_delete: 0
       match_operator: CONTAINS
       size: '60'
