--- a/modules/markaspot_group/config/install/field.storage.node.field_pbf_ref_group.yml
+++ b/modules/markaspot_group/config/install/field.storage.node.field_pbf_ref_group.yml
@@ -5,19 +5,19 @@ dependencies:
     - field_permissions
     - node
     - pbf
-    - user
+    - taxonomy
 third_party_settings:
   field_permissions:
     permission_type: custom
-id: node.field_pbf_ref_role
-field_name: field_pbf_ref_role
+id: node.field_pbf_ref_group
+field_name: field_pbf_ref_group
 entity_type: node
 type: pbf
 settings:
-  target_type: user_role
+  target_type: taxonomy_term
 module: pbf
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
