--- a/modules/markaspot_features/markaspot_user/config/install/user.role.moderator.yml
+++ b/modules/markaspot_features/markaspot_user/config/install/user.role.moderator.yml
@@ -18,13 +18,19 @@ permissions:
   - 'bypass mas validation'
   - 'create field_address'
   - 'create field_e_mail'
+  - 'create field_organisation'
+  - 'create field_pbf_ref_group'
   - 'create field_status_notes'
   - 'edit any service_request content'
   - 'edit field_address'
   - 'edit field_e_mail'
+  - 'edit field_organisation'
+  - 'edit field_pbf_ref_group'
   - 'edit field_status_notes'
   - 'edit own field_address'
   - 'edit own field_e_mail'
+  - 'edit own field_organisation'
+  - 'edit own field_pbf_ref_group'
   - 'edit own field_status_notes'
   - 'edit own service_request content'
   - 'post comments'
@@ -36,7 +42,11 @@ permissions:
   - 'use node.edit_service_request form mode'
   - 'use node.management form mode'
   - 'view field_e_mail'
+  - 'view field_organisation'
+  - 'view field_pbf_ref_group'
   - 'view own field_address'
   - 'view own field_e_mail'
+  - 'view own field_organisation'
+  - 'view own field_pbf_ref_group'
   - 'view own field_status_notes'
   - 'view the administration theme'
