--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,7 @@
     "drupal/token": "1.*",
     "drupal/shariff": ">=1.3",
     "drupal/r4032login": "dev-1.x",
+    "drupal/bootstrap_layouts": "^5.0",
     "drupal/views_bootstrap": "^3.0",
     "drupal/better_normalizers": "1.x-dev",
     "drupal/ctools": "3.x-dev",
