--- a/modules/markaspot_group/config/install/field.field.node.service_request.field_pbf_ref_role.yml
+++ b/modules/markaspot_group/config/install/field.field.node.service_request.field_pbf_ref_role.yml
@@ -12,7 +12,7 @@ id: node.service_request.field_pbf_ref_role
 field_name: field_pbf_ref_role
 entity_type: node
 bundle: service_request
-label: pbf_ref_role
+label: 'Permission Role'
 description: ''
 required: false
 translatable: false
