--- a/composer.json
+++ b/composer.json
@@ -23,21 +23,6 @@
     {
       "type": "vcs",
       "url": "https://github.com/markaspot/GeoPHP"
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "heiseonline/shariff",
-        "version": "master",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://github.com/heiseonline/shariff/releases/download/2.0.2/shariff-2.0.2.zip",
-          "type": "zip"
-        },
-        "require": {
-          "composer/installers": "~1.0"
-        }
-      }
     }
   ],
   "require": {
@@ -74,7 +59,7 @@
     "drupal/admin_toolbar": "1.*",
     "drupal/restui": "^1.15",
     "drupal/token": "1.*",
-    "drupal/shariff": ">=1.3",
+    "drupal/shariff": "dev-1.x",
     "drupal/r4032login": "dev-1.x",
     "drupal/bootstrap_layouts": "^5.0",
     "drupal/views_bootstrap": "^3.0",
@@ -154,10 +139,11 @@
       "drupal/rules": {
         "Type definition error": "https://www.drupal.org/files/issues/rules-Fix_type_definition_error-2694685-30.patch",
         "Action send mail, implode error": "https://www.drupal.org/files/issues/system-send-email-action-fails-if-to-is-a-string-2827183-2.patch",
-        "Send mail text field 2 textarea": "https://www.drupal.org/files/issues/rules_sendmail_textarea-2724129-34.patch"
+        "Send mail text field 2 textarea": "https://www.drupal.org/files/issues/rules_sendmail_textarea-2724129-34.patch",
+        "Set New revision to false on entity save": "patches/rules-entity-no-revision.patch"
       },
       "drupal/shariff": {
-        "Update library path for shariff latest version using npm-asset": "https://gist.githubusercontent.com/markaspot/d493f888f7fb85a23d94352f44f0d6d7/raw/3f31724a33197631da56ff4d597992f6e02641fb/gistfile1.txt"
+        "Use dist path for shariff library": "https://gist.githubusercontent.com/markaspot/e36e7f6a21f47a984711c6d5ca40a543/raw/965f199c1d22623771d049f7e94f3a7105e1c45f/shariff%2520drupal%2520dist%2520path"
       }
     }
   }
