Fix link in footer, about page. Close markaspot/mark-a-spot#64

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,13 +69,13 @@ install:
   - phpenv rehash
 
   # We need Phing to execute our build steps.
-  - composer global require phing/phing
-  # Build the Lightning code base with the latest dependencies.
-  - composer update
-  # Install Lightning cleanly so that settings.php will be created properly.
-  - phing install -Ddb.database=drupal -Ddb.user=markaspot -Ddb.password=markaspot -Ddb.host=127.0.0.1 -Durl=http://127.0.0.1:8080
+  #- composer global require phing/phing
+  # Build the Mark-a-Spot code base with the latest dependencies.
+  # - composer update
+  # Install Mark-a-Spot cleanly so that settings.php will be created properly.
+  # - phing install -Ddb.database=drupal -Ddb.user=markaspot -Ddb.password=markaspot -Ddb.host=127.0.0.1 -Durl=http://127.0.0.1:8080
   # Restore and update from the previous version.
-  - robo update $VERSION
+  # - robo update $VERSION
 
 before_script:
   - drush runserver --default-server=builtin 8080 &>/dev/null &
