--- a/build.xml
+++ b/build.xml
@@ -18,17 +18,17 @@
     <property name="db.host" value="localhost" />
     <property name="db.user" value="root" />
     <property name="db.password" value="" />
-    <property name="db.database" value="lightning" />
+    <property name="db.database" value="markaspot" />
     <property name="db.url" value="${db.type}://${db.user}:${db.password}@${db.host}/${db.database}" />
 
     <!-- Installation and build-specific variables. -->
     <property name="url" value="http://127.0.0.1" />
     <property name="docroot" value="docroot" />
-    <property name="profile" value="${docroot}/profiles/lightning" />
+    <property name="profile" value="${docroot}/profiles/markaspot" />
     <property name="site" value="${docroot}/sites/default" />
     <property name="version" value="HEAD" />
     <property name="fixture" value="${project.basedir}/tests/fixtures/${version}.sql" />
-    <property name="cloud.subscription" value="lightningnightly" />
+    <property name="cloud.subscription" value="markaspotnightly" />
 
     <!-- Attempts to find global Drush install and determine if it's 8.1.15 -->
     <target name="find-drush8" depends="env">
@@ -99,11 +99,11 @@
     <!-- Installs Mark-a-Spot and sets it up for development. -->
     <target name="install" depends="env">
         <!-- Use passthru() when executing drupal site-install so that we'll know if errors occur. -->
-        <exec command="${drupal} site:install lightning --db-type=${db.type} --db-host=${db.host} --db-name=${db.database} --db-user=${db.user} --db-pass=${db.password} --no-interaction --force" passthru="true" />
+        <exec command="${drupal} site:install markaspot --db-type=${db.type} --db-host=${db.host} --db-name=${db.database} --db-user=${db.user} --db-pass=${db.password} --no-interaction --force" passthru="true" />
         <chmod file="${site}" mode="0755" />
 
         <!-- Install Mark-a-Spot Dev. -->
-        <exec command="${drupal} module:install lightning_dev --yes" dir="${docroot}" passthru="true" />
+        <exec command="${drupal} module:install markaspot_dev --yes" dir="${docroot}" passthru="true" />
 
         <!-- Prepare PHPUnit. -->
         <mkdir dir="${docroot}/modules" />
