--- a/modules/markaspot_trend/config/install/page_manager.page_variant.visualization-panels_variant-0.yml
+++ b/modules/markaspot_trend/config/install/page_manager.page_variant.visualization-panels_variant-0.yml
@@ -139,7 +139,7 @@ variant_settings:
           col-sm-12: col-sm-12
         add_region_classes: 1
         attributes: ''
-  page_title: 'Open311 Data Vizualisation'
+  page_title: 'Open311 Data Visualization'
   storage_type: page_manager
   storage_id: visualization-panels_variant-0
   builder: ipe
