--- a/modules/markaspot_trend/markaspot_trend.libraries.yml
+++ b/modules/markaspot_trend/markaspot_trend.libraries.yml
@@ -59,12 +59,12 @@ vue-router:
    https://unpkg.com/vue-router/dist/vue-router.min.js: { type: external, minified: true }
 
 vue:
-  remote: https://unpkg.com/vue@2.5.9/dist/vue.js
-  version: 2.5.9
+  remote: https://unpkg.com/vue@2.5.13/dist/vue.min.js
+  version: 2.5.13
   license:
     name: MIT
   js:
-    https://unpkg.com/vue@2.5.13/dist/vue.js: { type: external, minified: true }
+    https://unpkg.com/vue@2.5.13/dist/vue.min.js: { type: external, minified: true }
 
 #vuetrend:
 #  remote: https://unpkg.com/vuetrend
