Update page-manager issue #2918564

--- a/composer.json
+++ b/composer.json
@@ -140,7 +140,11 @@
         "Type definition error": "https://www.drupal.org/files/issues/rules-Fix_type_definition_error-2694685-30.patch",
         "Action send mail, implode error": "https://www.drupal.org/files/issues/system-send-email-action-fails-if-to-is-a-string-2827183-2.patch",
         "Send mail text field 2 textarea": "https://www.drupal.org/files/issues/rules_sendmail_textarea-2724129-34.patch",
-        "Set New revision to false on entity save": "https://gist.githubusercontent.com/markaspot/049453ad442cea2df105b4b9b74bc331/raw/ae409ed4a23899f33911635c77e52e76960570f9/save%2520entity%2520no%2520revisions"
+        "Set New revision to false on entity save": "https://gist.githubusercontent.com/markaspot/049453ad442cea2df105b4b9b74bc331/raw/ae409ed4a23899f33911635c77e52e76960570f9/save%2520entity%2520no%2520revisions",
+        "With Rules enabled, page_manager pages return a 404 after core 8.5 update": "https://www.drupal.org/files/issues/2018-03-15/2951263-rules-13.patch"
+      },
+      "drupal/page_manager": {
+        "https://www.drupal.org/project/page_manager/issues/2918564": "https://www.drupal.org/files/issues/2918564-22.patch"
       },
       "drupal/shariff": {
         "Use dist path for shariff library": "https://gist.githubusercontent.com/markaspot/e36e7f6a21f47a984711c6d5ca40a543/raw/965f199c1d22623771d049f7e94f3a7105e1c45f/shariff%2520drupal%2520dist%2520path"
