--- a/composer.json
+++ b/composer.json
@@ -91,7 +91,7 @@
     "drupal/quick_node_clone": "^1.5",
     "drupal/tac_lite": "^1.4",
     "drupal/views_bulk_edit": "^2",
-    "drupal/views_bulk_operations": "1.0.0",
+    "drupal/views_bulk_operations": "^2",
     "drupal/devel": "^1.2"
   },
   "minimum-stability": "dev",
